2011-02-11 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::install.lst): Fix typos.

	* bin/cygbuild.sh (CygbuildInstallExtraManual): Suport POD manual
	pages in separate directories.
	(CygbuildCmdInstallList): Compress */man/* files.

2011-02-10  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildGPGsignFiles): Dispaly message if GPG
	is not in PATH. Return success, not error to continue making package.

2010-11-21  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CYGBUILD_SRCPKG_URL): Change from
	mirrors.eu.kernel.org to ftp.heanet.ie

2010-06-24  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES):
	document install.lst to remove suffixes .sh .pl .py

	* bin/cygbuild.sh
	(top level): Update comments. Add unalias.
	(top level::CYGBUILD_INSTALL_INFO): New variable.
	(CygbuildMakefileRunInstallPythonFix): Update displayed message.
	(CygbuildPatchApplyQuiltMaybe): Improve quilt message.
	Add handling for quilt error messages.
	(CygbuildDllToLibName): Add openssl. Improve libz detection.
	(CygbuildInstallPostinstallPartEtc): Change complex
	process substitution <() to plain out/in file read.
	(CygbuildCmdInstallList): During install remove suffixes
	.sh .pl and .py. Substitute various CYGWIN-PATCHES/ prefixes.
	(CygbuildHelpShort): New section INSTALL INSTARUCTIONS .

2010-06-23  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallList): Use prox '+:'
	variabe substitution.
	(CygbuildDefineGlobalPythonVersion): New global variable
	PYTHON_VERSION_MAJOR
	(CygbuildMakefileRunInstallPythonDistutilsStart): New.
	(CygbuildMakefileRunInstallPythonDistutilsStop): New.
	(CygbuildMakefileRunInstallPythonMain): Add support for installing
	libraries that use *.pth. Requires custom ~/.pydistutils.cfg
	and PYTHONPATH.
	(CygbuildIsPythonLibrary): New.
	(CygbuildCygDirCheck): Tim leading path in displayed warning
	message.